welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: identifier expected but 'final' found.
def final(){
    ^